# telegram-claude-code

./: .dockerignore  .env  .env.example  .env.staging  .env.test  .gitignore  CLAUDE.md  CLAUDE_AUTH_IMPROVEMENTS.md  Cargo.toml  DOCKER.md  DOCKERFILE_FIXES.md  Dockerfile  Dockerfile.runtime  LICENSE  README.md  docker-compose.runtime-test.yml  docker-compose.test.yml  docker-compose.yml  test-docker-compose.sh
.claude/: settings.json
.claude/commands/: new.md  push-pr.md  run-bot.md
.github/workflows/: ci.yml  claude_code.yml  copilot-setup-steps.yml  launch-bot.yml
docs/: ROOTLESS_DOCKER_MIGRATION.md
fluentd/conf/: fluent.conf
src/: claude_code_client.rs  claude_oauth.rs  claude_oauth_rust.rs  lib.rs  main.rs
src/bot/: auth_session.rs  claude_session.rs  handlers.rs  markdown.rs  mod.rs  state.rs
src/claude_code_client/: auth.rs  claude_command.rs  config.rs  container_cred_storage.rs  container_utils.rs  executor.rs  github_client.rs  message_parser.rs  mod.rs  response_processor.rs  streaming.rs
src/claude_oauth/: mod.rs
src/commands/: auth.rs  authenticate_claude.rs  help.rs  (+12 more)
tests/: README.md  background_image_pull_test.rs  bot_workflow_test.rs  buffering_test.rs  check_auth_status_test.rs  claude_auth_panic_test.rs  claude_auth_test.rs  claude_auth_url_test.rs  claude_authentication_tests.rs  claude_cli_stream_termination_test.rs  claude_config_persistence_test.rs  claude_core_tests.rs  claude_integration_tests.rs  claude_interactive_login_test.rs  claude_json_fallback_test.rs  claude_json_initialization_test.rs  claude_status_test.rs  claude_timeout_test.rs  claude_update_entrypoint_test.rs  claude_update_test.rs  container_stability_test.rs  debug_claude_json_test.rs  debug_logging_test.rs  enhanced_workflow_test.rs  exec_command_allow_failure_tests.rs  github_auth_test.rs  github_client_tests.rs  github_clone_integration_test.rs  github_device_flag_test.rs  github_integration_tests.rs  github_oauth_early_return_test.rs  github_status_integration_test.rs  github_timeout_test.rs  infrastructure_tests.rs  test_utils.rs  timeout_integration_test.rs  volume_persistence_test.rs
(+18 files in other folders)
