[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.14", features = ["macros"] }
tokio = { version = "1.45", features = ["full"] }
bollard = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
url = "2.5"

anyhow = "1.0"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }

[dev-dependencies]
tokio-test = "0.4"
rstest = "0.23"
regex = "1.0"
