[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.16", features = ["macros"] }
tokio = { version = "1.45", features = ["full"] }
tokio-stream = "0.1"
bollard = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
url = "2.5"
tar = "0.4"
async-trait = "0.1"

anyhow = "1.0"
base64 = "0.22"
hex = "0.4"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde", "clock"] }
shlex = "1.3"
bytes = "1.8"
http-body-util = "0.1"

[dev-dependencies]
tokio-test = "0.4"
rstest = "0.25"
regex = "1.0"
